--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,22 @@ sudo: false # enables container based builds for travis
 language: java
 jdk:
   - oraclejdk7
+
+
 install: mvn install -Ptomcat,h2,engine-integration -pl qa/integration-tests-engine -am -DskipTests -s settings/maven/nexus-settings.xml -B -q
+
 before_script:
-  - echo "$MAVEN_OPTS"
-  - echo "free -m"
-  - echo "mvn -version"
-  - echo "MAVEN_OPTS='-Xmx1024m -XX:MaxPermSize=128m'" > ~/.mavenrc
+  - cat /etc/mavenrc
+  - echo "MAVEN_OPTS='-Dmaven.repo.local=$HOME/.m2/repository -Xmx1024m -XX:MaxPermSize=192m'" > ~/.mavenrc
+
 script:
-- mvn verify -Ptomcat,h2,engine-integration -pl qa/integration-tests-engine -am -s settings/maven/nexus-settings.xml
+  - mvn verify -Ptomcat,h2,engine-integration -pl qa/integration-tests-engine -am -s settings/maven/nexus-settings.xml
+
+cache:
+  directories:
+    - $HOME/.m2/repository
+
+before_cache:
+  - 'find ~/.m2/repository -type d -name \*-SNAPSHOT -exec rm -rf {} \;'
+  - 'find ~/.m2/repository -name maven-metadata-\* -exec rm {} \;'
+  - 'find ~/.m2/repository -name resolver-status.properties -exec rm {} \;'
